<resources>
    <string name="app_name">BoomeranGO</string>
    <string name="splash_copyright">© 2021. ОАО «Covenant» </string>
    <plurals name="add_wish_exist_plurals">
        <item quantity="one">%1$d такое желание</item>
        <item quantity="two">%1$d таких желания</item>
        <item quantity="few">%1$d таких желаний</item>
        <item quantity="many">%1$d таких желаний</item>
        <item quantity="other">%1$d таких желаний</item>
    </plurals>
        <string name="action_share">Share</string>
        <string name="action_upload">Upload</string>
        <string name="action_copy">Copy</string>
        <string name="action_print">Print</string>
    <string name="wish_edit_progress">Сохранение изменений</string>
    <string name="wish_save_progress">Создаем желание…</string>
    <string name="edit_profile_title_nick">Никнейм в приложении</string>
    <string name="edit_profile_profile_free_name">Никнейм корректен</string>
    <string name="edit_profile_nick_requirements">Слишком длинный никнейм</string>
    <string name="edit_profile_min_len_nick_name">Слишком короткий никнейм</string>
    <string name="wish_edit_picker_title">Добавить фото</string>
    <string name="wish_edit_picker_url">Ссылка на фото</string>
    <string name="wish_edit_picker_camera">Сделать фото</string>
    <string-array name="wish_edit_privacy">
        <item>Видно всем</item>
        <item>Видно только друзьям</item>
        <item>Видно только мне</item>
    </string-array>
    <string name="wish_edit_picker_gallery">Добавить из библиотеки</string>
    <string name="profile_set_photo_title">Добавь фото</string>
    <string name="edit_profile_profile_already_exist_name">Никнейм пользователя уже существует</string>
    <string name="edit_profile_enter_nickname">Придумай никнейм</string>
    <string name="auth_to_register">Зарегистрироваться</string>
    <string name="auth_user_blocked">Пользователь заблокирован на %1$s</string>
    <string name="auth_incorrect_phone">Неверный номер телефона</string>
    <string name="auth_incorrect_all">Пропущены поля авторизации</string>
    <string name="password_error">Поля пропущенны или пароль не сопадает</string>
    <string name="auth_wrong_sms_code">Введен неверный код</string>
    <string name="auth_send_again">Не пришел код? &lt;u>Отправить снова&lt;/u></string>
    <string name="auth_sms_code_sent">Мы отправили вам смс-код</string>
    <string name="auth_timeout_code">Время действия кода: %1$s</string>
    <string name="auth_send_again_msg">Вы сможете запросить повторную \n отправку кода через %1$s</string>
    <string name="wish_edit_add_img">Добавить изображение</string>
    <string name="wish_edit_add_img_obligatorily">Обязательно. Не более 5 мб.</string>
    <string name="privacy">Приватность</string>
    <string name="period_choice">Выберите срок аренды</string>
    <string name="currency_choice">Установите Валюту</string>
    <string name="wish_edit_loader_text">Заполняю остальные поля...</string>
    <string name="wish_edit_url_on_wish">Ссылка в интернет-магазин</string>
    <string name="wish_edit_name_hint">Название (обязательное)</string>
    <string name="wish_edit_price_hint">Цена (обязательное)</string>
    <string name="wish_edit_url_broken">Некорректная ссылка</string>
    <string name="wish_edit_description_hint">Описание</string>
    <string name="add_card_dialog_not_connected_bank_card">Чтобы получать подарки необходимо подключить банковскую карту</string>
    <string name="add_card_connect_bank_card">Подключить карту</string>
    <string name="wish_edit_field_required">Поле обязательно для заполнения</string>
    <string-array name="wish_edit_cyrrency">
        <item>RUB</item>
        <item>EURO</item>
        <item>USD</item>
    </string-array>
    <string-array name="wish_edit_period">
        <item>ДЕНЬ</item>
        <item>МЕСЯЦ</item>
        <item>ЧАС</item>
    </string-array>
    <string name="ticket_event_name">Ваш билет</string>
    <string name="ticket_verification">Проверка билетов</string>
    <string name="ticket_call">Позвонить</string>
    <string name="ticket_welcome">"Здравствуйте,\n%1$s %2$s!"</string>
    <string name="ticket_your_ticket">Это ваш пригласительный билет на мероприятие</string>
    <string name="ticket_set_code">Покажите этот QR-код сотруднику при входе.</string>
    <string name="ticket_who_call">%1$s %2$s,</string>
    <string name="security_set_text">Сканировать QR-код</string>
    <string name="security_good_day">Добрый день, %1$s!</string>
    <string name="security_you_entered_as_security">Вы вошли в приложение как\nсотрудник охраны</string>
    <string name="error_general">Произошла ошибка, попробуйте повторить позже или еще раз</string>
    <string name="error_load_image">Произошла ошибка загрузки фото, попробуйте повторить позже или еще раз</string>
    <string name="imag_load_ok_save">Изображение успешно сохранено</string>
    <string name="imag_load_ok_delete">Изображение успешно удалено</string>
    <string name="error_load_ok_delete">Произошла ошибка при удалении фото, попробуйте повторить позже или еще раз</string>
    <string name="hamburger_open">open</string>
    <string name="hamburger_close">close</string>
    <string name="hamburger_logout">Выход</string>
    <string name="hamburger_default_username">User Name</string>
    <string name="hamburger_guests">Гости</string>
    <string name="hamburger_invited">Приглашенные</string>
    <string name="events">МЕРОПРИЯТИЯ</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="back">назад</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="pass">Пропустить</string>
    <string name="fail">Отказать</string>
    <string name="company">Компания</string>
    <string name="reject">Отклонить</string>
    <string name="approve">Согласовать</string>
    <string name="inn">ИНН</string>
    <string name="phone_company">Телефон компании</string>
    <string name="phone">Телефон</string>
    <string name="email">Электронная почта</string>
    <string name="position">Должность</string>
    <string name="attribute">Признак</string>
    <string name="declarer">Заявитель</string>
    <string name="responsible">Ответственный на площадке</string>
    <string name="accompanying">Сопровождающие</string>
    <string name="save">Сохранить</string>
    <string name="rega">Вы не авторизованы, пройдите регистрацию!</string>
    <string name="escalate">Эскалировать</string>
    <string name="remove">Удалить</string>
    <string name="change_request">Вернуть на доработку</string>
    <string name="edit">Редактировать</string>
    <string name="coming_soon">Уже скоро…</string>
    <string name="comment">Коментарий</string>
    <string name="barcode_scanner_hint">Разместите QR-код внутри \n этого квадрата</string>
    <string name="barcode_scanner_title">Сканирование</string>
    <string name="guest_not_found_go_to_manager">Направьте гостя к сотрудникам рецепции или попросите связаться с его встречающим</string>
    <string name="guest_not_found_to_database">Гость не обнаружен в базе</string>
    <string name="guest_manager_label">Встречающий</string>
    <string name="guest_denied">Отказано</string>
    <string name="guest_your_manager_label">Вас встретит</string>
    <string name="guest_manager_number">его номер для связи:</string>
    <string name="guest_state_agreed">Согласован</string>
    <string name="guest_state_refused">Отклонен</string>
    <string name="guest_tab_about_guest">О госте</string>
    <string name="guest_tab_about_company">О компании</string>
    <string name="guest_fullname_blank">%1$s\n%2$s %3$s</string>
    <string name="guest_deny">ОТКАЗАНО %1$d</string>
    <string name="guest_count">Всего гостей: %1$d</string>
    <string name="logout_going_exit_from_application">Вы собираетесь выйти из приложения?</string>
    <string name="error_message">Сообщение об ошибке :</string>
    <string name="reg_succesfull">Регистрация успешно пройдена!</string>
    <string name="reg_filed">Регистрация провалена!</string>
    <string name="toast_agreed">Согласовано:</string>
    <string name="toast_refused">Отклонено:</string>
    <string name="guest_card_state_draft">Драфт</string>
    <string name="guest_card_state_saved">Сохранено</string>
    <string name="guest_card_state_send_for_approval">На согласовании</string>
    <string name="guest_card_state_agreed">Согласовано</string>
    <string name="guest_card_state_refused">Отклонено</string>
    <string name="guest_card_state_deleted">Удалено</string>
    <string name="guest_card_state_change_request">На доработке</string>
    <string name="approve_dialog_approve">Согласование</string>
    <string name="approve_dialog_set_priority_guest">Укажите приоритет гостя</string>
    <string name="dialog_progress_please_wait">Пожалуйста подождите…</string>
    <string name="dialog_invite_send_an_invitation_letter">Отправить письмо с приглашением?</string>
    <string name="dialog_title_decline">Отклонение</string>
    <string name="dialog_title_return_for_revision">Возврат на доработку</string>
    <string name="dialog_decline_text">Укажите причину отклонения</string>
    <string name="dialog_save_btn">Сохранить</string>
    <string name="dialog_chose_action">Выберите действие</string>
    <string name="dialog_no_internet">Отсутствует подключение</string>
    <string name="edit_guest_card_title">Редактировать карточку</string>
    <string name="edit_guest_card_label_sur_name">Фамилия *</string>
    <string name="edit_guest_card_label_first_name">Имя *</string>
    <string name="edit_guest_card_label_last_name">Отчество *</string>
    <string name="edit_guest_card_label_attribute">Признак *</string>
    <string name="edit_guest_card_label_company">Компания *</string>
    <string name="edit_guest_card_label_inn">ИНН *</string>
    <string name="edit_guest_card_inn_count">ИНН %1$s</string>
    <string name="edit_guest_card_label_phone_company">Телефон компании</string>
    <string name="edit_guest_card_label_phone_company_additional">Добавочный</string>
    <string name="edit_guest_card_label_add_phone">Добавить телефон</string>
    <string name="edit_guest_card_label_email">Электронная почта *</string>
    <string name="edit_guest_card_label_position">Должность *</string>
    <string name="edit_guest_card_label_phone">Телефон *</string>
    <string name="edit_guest_card_label_email_company">Электронная почта компании</string>
    <string name="edit_guest_card_label_priority">Приоритет *</string>
    <string name="edit_guest_card_label_applicant">Заявитель *</string>
    <string name="edit_guest_card_label_responsible">Ответственный на площадке *</string>
    <string name="edit_guest_card_label_accompanyings">Сопровождающие</string>
    <string name="edit_guest_card_invalid">Не все поля заполнены</string>
    <string name="edit_guest_card_valid">Поля валидны</string>
    <string name="edit_guest_card_successfully_saved">Карта успешно сохранена</string>
    <string name="edit_guest_card_saving">Сохранение\nкарточки…</string>
    <string name="approve_list_hint_search">Введите ФИО или Компанию</string>
    <string name="companies_list_title">Компании</string>
    <string name="permission_read_external_storage">Требуется разрешение на чтение из памяти</string>
    <string name="structure_unit_list_title">Орг. структура</string>
    <string name="search_hint">Введите поисковый запрос</string>
    <string name="min_title_mane_advert">Минимальное описание от 5 символов</string>
    <string name="base_guest_manager_all_tab">Все</string>
    <string name="base_guest_manager_my_guests_tab">Мои гости</string>
    <string name="base_guest_manager_i_am_interested_tab">Мне интересны</string>
    <string name="login_autorize">Авторизация</string>
    <string name="autorize_nickname">Ваш никнейм</string>
    <string name="autorize_mail">Ваша почта</string>
    <string name="autorize_password">Ваш пароль</string>
</resources>