<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/background_light"
                                             android:orientation="vertical" android:id="@+id/constraintLayout">

    <android.support.constraint.Guideline
            android:id="@+id/verticalGlStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_double" />

    <android.support.constraint.Guideline
            android:id="@+id/verticalGlEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_double" />

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/verticalGlStart"
            app:layout_constraintTop_toBottomOf="@+id/gpbemLogo">

        <EditText
                android:id="@+id/myMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/azure_radiance"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/autorize_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/azure_radiance"
                android:textColorHint="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nickName" />

        <EditText
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/azure_radiance"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/autorize_password"
                android:inputType="textEmailAddress"
                android:textColor="@color/azure_radiance"
                android:textColorHint="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myMail" />

        <EditText
                android:id="@+id/nickName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/azure_radiance"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/autorize_nickname"
                android:inputType="textEmailAddress"
                android:textColor="@color/azure_radiance"
                android:textColorHint="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
                android:id="@+id/registrationLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="196dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:fontFamily="@font/roboto"
                android:text="@string/auth_incorrect_phone"
                android:textColor="@color/monza"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrationLayout" />

        <Button
                android:id="@+id/toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_splash_gradient"
                android:fontFamily="@font/roboto"
                android:padding="11dp"
                android:text="@string/auth_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrationLayout"
                app:layout_constraintVertical_bias="0.0" />

        <TextView
                android:id="@+id/nickErr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(Не обязательно) для авторизации"
                android:textColor="#00838F"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/nickName"
                app:layout_constraintStart_toStartOf="@+id/nickName"
                app:layout_constraintTop_toBottomOf="@+id/nickName" />

    </android.support.constraint.ConstraintLayout>

    <include
            android:id="@+id/gpbemLogo"
            layout="@layout/view_logo_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/verticalGlStart"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/autorize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_splash_gradient"
            android:fontFamily="@font/roboto"
            android:padding="11dp"
            android:text="@string/login_autorize"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/verticalGlEnd"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="@+id/verticalGlStart"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</android.support.constraint.ConstraintLayout>